# pushka-vpn-bot

./: .env.examle  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 17af1e8e6c7c_add_cols_to_vpn_server_table.py  5f7a5051d598_server_id_for_user_link.py  9a03c1bd9a69_change_user_link_relation.py  cc4fa7ce61a4_add_transactions_with_vpn_servers.py  f524536eedbf_first_commit.py  fc828fc6fd9c_client_id_and_sub_id_for_user_link.py
src/: main.py
src/bot/: __init__.py
src/bot/callback/: user_callback.py
src/bot/kb/: user_btn.py  user_kb.py
src/bot/msg/: payment_msg.py  user_msg.py
src/bot/routes/: payment_routes.py  user_routes.py
src/bot/utils/: filters.py
src/crud/: common.py  tariff.py  transaction.py  user.py  user_tariff.py  vpn_server.py
src/database/: database.py  mixins.py
src/models/: __init__.py  tariff.py  transaction.py  user.py  user_tariff.py  vpn_server.py
src/schemas/: common.py  response.py  tariff.py  transaction.py  user.py  user_tariff.py  vpn_server.py
src/services/: __init__.py  vpn_server_synchronizer.py
src/utils/: __init__.py  bot.py  common.py  logs.py  payment.py  settings.py  tariff.py  user.py  vpn_client.py  vpn_server.py  vpn_server_request.py
