[tool.poetry]
name = "pushka-vpn"
version = "0.1.0"
description = "Pushka VPN telegram bot"
authors = ["pnd <push-trust@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
alembic-postgresql-enum = "^1.3.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip_magic_trailing_comma = true
target-version = ['py310']
include = '\.pyi?$'
